--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/node": "^20.5.6",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
@@ -38,5 +39,10 @@
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "fluent-ffmpeg": "^2.1.2",
+    "ora": "^5.4.1",
+    "sanitize-filename": "^1.6.3"
   }
 }
