--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     ]
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/node": "^20.5.6",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
@@ -41,7 +40,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "fluent-ffmpeg": "^2.1.2",
+    "eloquent-ffmpeg": "^0.14.0",
     "ora": "^5.4.1",
     "sanitize-filename": "^1.6.3"
   }
